...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.427"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/routineNameET"
            android:layout_width="346dp"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:textColor="@color/white"
            android:hint="Workout"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTV" />

        <Button
            android:id="@+id/workoutItemAddBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="316dp"
            android:text="Add Item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/routineNameET" />

        <Button
            android:id="@+id/workoutItemDeleteBtn"
            android:layout_width="wrap_content"
...
            android:layout_marginTop="316dp"
            android:text="Delete Item"
            app:layout_constraintStart_toEndOf="@+id/workoutItemAddBtn"
            app:layout_constraintTop_toBottomOf="@+id/routineNameET" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="388dp"
            android:text="Save"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
...
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveBtn"
            app:layout_constraintVertical_bias="0.9" />

        <ListView
            android:id="@+id/routineListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:divider="@color/colorPrimary"
            android:dividerHeight="2dp"
...
